--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -39,7 +39,8 @@
     <string name="INVITATION_SUBJECT">Download LastQuakeChile App</string>
     <string name="coordenadas_oeste">W</string>
     <string name="coordenadas_este">E</string>
-    <string name="imagen_toolbar_contact">Image toolbar contact</string>
+    <string name="imagen_toolbar_contact">Toolbar image contact</string>
     <string name="toolbar_title">Contact</string>
     <string name="seccion_listado_de_sismos">List of quakes section</string>
+    <string name="titulo_toolbar">Toolbar title</string>
 </resources>
