--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,7 +69,11 @@
     <string name="coordenadas_este">E</string>
     <string name="format_coordenadas" translatable="false">%s \n%s</string>
     <string name="toolbar_title">Contacto</string>
-    <string name="seccion_listado_de_sismos">Seccion listado de sismos</string>
+    <string name="seccion_listado_de_sismos">Sección listado de sismos</string>
+    <string name="titulo_toolbar">Título toolbar</string>
+    <string name="last_quakes_info_card_view_tittle">Últimos sismos</string>
+    <string name="last_quakes_info_card_view_button">Entendido</string>
+    <string name="last_quakes_info_card_view_description">En este listado se muestran los últimos sismos en Chile</string>
 
 
     <!-- FIREBASE-->
@@ -92,6 +96,7 @@
     <string name="FIREBASE_SUSCRITO" translatable="false">Suscrito</string>
 
     <!-- Strings de Snackbars y LOGS -->
+    <!-- TAG PARA ETIQUETA (primer argumento de logs) -->
     <string name="FLAG_RETRY" translatable="false">Recargar</string>
     <string name="TAG_PROGRESS_FROM_FRAGMENT" translatable="false">PROGRESS_FRAGMENT</string>
     <string name="TAG_PROGRESS_FROM_FRAGMENT_UPDATE_RESPONSE" translatable="false">UPDATED INFORMATION - FRAGMENT</string>
@@ -101,11 +106,14 @@
     <string name="SNACKBAR_TIMEOUT_ERROR_PRESSED" translatable="false">SNACKBAR_TIMEOUT_ERROR</string>
     <string name="SNACKBAR_NOCONNECTION_ERROR_PRESSED" translatable="false">SNACKBAR_NOCONNECTION_ERROR</string>
     <string name="SNACKBAR_SERVER_ERROR_PRESSED" translatable="false">SNACKBAR_SERVER_ERROR</string>
-    <string name="JSON_GENERAL_ERROR" translatable="false">JSON_GENERAL_ERROR</string>
-    <string name="JSON_PARSE_ERROR" translatable="false">JSON_PARSE_ERROR</string>
-    <string name="CONNECTION_OK" translatable="false">CONNECTION_OK</string>
+    <string name="TAG_JSON_GENERAL_ERROR" translatable="false">JSON_GENERAL_ERROR</string>
+    <string name="TAG_JSON_PARSE_ERROR" translatable="false">JSON_PARSE_ERROR</string>
+    <string name="TAG_CONNECTION_OK" translatable="false">CONNECTION_OK</string>
     <string name="CONNECTION_OK_RESPONSE" translatable="false">Conexion correcta</string>
     <string name="CONNECTED" translatable="false">CONNECTION_STATUS</string>
+    <string name="TAG_CARD_VIEW_INFO" translatable="false">CARD_VIEW_INFO</string>
+    <string name="TAG_FIRST_RUN_STATUS" translatable="false">FIRST_RUN</string>
+    <string name="FIRST_RUN_STATUS_RESPONSE" translatable="false">EJECUCION DE PRIMER INICIO</string>
 
     <!-- Strings de Volley -->
     <string name="TAG_VOLLEY_ERROR" translatable="false">VOLLEY_ERROR</string>
@@ -132,14 +140,6 @@
     <string name="INTENT_SENSIBLE" translatable="false">sensible</string>
     <string name="INTENT_LINK_FOTO" translatable="false">imagen_url</string>
 
-    <!-- CARD VIEW DE INFORMACION -->
-    <string name="last_quakes_info_card_view_tittle">Últimos sismos</string>
-    <string name="last_quakes_info_card_view_button">Entendido</string>
-    <string name="last_quakes_info_card_view_description">En este listado se muestran los últimos sismos en Chile</string>
-    <string name="shared_card_view_info" translatable="false">CARD_VIEW_INFO</string>
-    <string name="shared_pref_status_card_view" translatable="false">estado_card_view_info</string>
-    <string name="shared_pref_status_result_card_view" translatable="false">entendido</string>
-
     <!-- Strings para calculode tiempo -->
     <string name="UTILS_TIEMPO_DIAS" translatable="false">dias</string>
     <string name="UTILS_TIEMPO_HORAS" translatable="false">horas</string>
@@ -165,13 +165,23 @@
 
     <!-- TAG GOOGLE PLAY -->
     <string name="TAG_GOOGLE_PLAY" translatable="false">GOOGLE_PLAY</string>
-    <string name="TAG_GOOGLE_PLAY_NOSOPORTADO" translatable="false">Dispositivo no soportado</string>
-    <string name="TAG_GOOGLE_PLAY_ACTUALIZADO" translatable="false">Google Play actualizado</string>
+    <string name="GOOGLE_PLAY_NOSOPORTADO" translatable="false">Dispositivo no soportado</string>
+    <string name="GOOGLE_PLAY_ACTUALIZADO" translatable="false">Google Play actualizado</string>
 
     <!-- INVITATION STRINGS -->
     <string name="INVITATION_TITLE">¡Invita a tus amigos a usar la App!</string>
     <string name="INVITATION_DEEP_LINK" translatable="false">https://lastquakechile.page.link/lqch</string>
     <string name="INVITATION_SUBJECT">Descarga LastQuakeChile App</string>
+    <string name="TAG_DEEP_LINK_INVITATION" translatable="false">INTENT_INVITACION</string>
+    <string name="INVITATION_STATUS" translatable="false">Invitacion sin datos</string>
+    <string name="TAG_DEEP_LINK_DATA" translatable="false">DEEP_LINK</string>
+    <string name="TAG_INVITATION_ID" translatable="false">INVITACION_ID</string>
+
+    <!-- SHARE PREFERENCES KEYS (Variables) -->
+    <string name="SHARED_PREF_FIRST_RUN" translatable="false">first_run</string>
+    <string name="SHARED_PREF_STATUS_CARD_VIEW_INFO" translatable="false">estado_card_view_info</string>
+    <string name="SHARED_PREF_STATUS_CARD_VIEW_INFO_RESULT" translatable="false">entendido</string>
+    <string name="TAG_INVITATION_RECEIVE">INVITACION</string>
 
 
 </resources>
