Correccion de string estado preliminar y verificado en Ingles

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -48,4 +48,7 @@
     <string name="boton_flotante_facebook">Floating button Facebook</string>
     <string name="boton_compartir_sismo">Button to share quake</string>
     <string name="imagen_estado_sismo">Quake status image</string>
+    <string name="quakes_details_estado_sismo">Quake %s</string>
+    <string name="quakes_details_estado_sismo_preliminar">preliminary</string>
+    <string name="quakes_details_estado_sismo_verificado">verified</string>
 </resources>
