--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="search">Buscar</string>
     <string name="invite">Invitar amigos</string>
 
-    <!-- TODO: Cambiar la direccion hacia Heroku y Actualizar HEROKU con el nuevo config en xamp -->
+
     <!-- URL SERVIDOR HEROKU -->
     <string name="URL_GET_PROD" translatable="false">https://lastquakechile-server-dev.herokuapp.com/lastquakechile/api/quakes/?limite=%1$s</string>
     <string name="DEEP_LINK" translatable="false">https://lastquakechile.page.link/lqch</string>
@@ -49,11 +49,11 @@
     <string name="quake_time_hour" translatable="false">%1$d h</string>
     <string name="quake_time_minute" translatable="false">%1$d m</string>
     <string name="quake_time_second" translatable="false">%1$d s</string>
-    <string name="quake_time_day_info_windows" translatable="false">Hace: %1$d d</string>
-    <string name="quake_time_day_hour_info_windows" translatable="false">Hace: %1$d d %2$d h</string>
-    <string name="quake_time_hour_info_windows" translatable="false">Hace: %1$d h</string>
-    <string name="quake_time_minute_info_windows" translatable="false">Hace: %1$d m</string>
-    <string name="quake_time_second_info_windows" translatable="false">Hace: %1$d s</string>
+    <string name="quake_time_day_info_windows">Hace: %1$d d</string>
+    <string name="quake_time_day_hour_info_windows">Hace: %1$d d %2$d h</string>
+    <string name="quake_time_hour_info_windows">Hace: %1$d h</string>
+    <string name="quake_time_minute_info_windows">Hace: %1$d m</string>
+    <string name="quake_time_second_info_windows">Hace: %1$d s</string>
     <string name="imagen_geografica_posicion_sismo">Imagen geografica posición sismo</string>
     <string name="icono_tiempo">Icono tiempo</string>
     <string name="tiempo">Fecha/Hora</string>
@@ -65,7 +65,7 @@
     <string name="escala">Escala</string>
     <string name="quake_details_escala" translatable="false">%1$s</string>
     <string name="quake_details_profundidad" translatable="false">%.1f Km</string>
-    <string name="profundidad_info_windows" translatable="false">Profundidad %.1f Km</string>
+    <string name="profundidad_info_windows">Profundidad: %.1f Km</string>
     <string name="magnitud" translatable="false">%.1f</string>
     <string name="icono_mail">Icono email</string>
     <string name="icono_persona">Icono persona</string>
@@ -226,6 +226,11 @@
     <string name="TAG_INTENT_SHARE_BITMAP" translatable="false">BITMAPS</string>
     <string name="TAG_INTENT_SHARE_BITMAP_MESSAGE" translatable="false">BITMAPS CARGADOS</string>
     <string name="TAG_INTENT_SHARE_BITMAP_MESSAGE_FAIL" translatable="false">BITMAPS FAIL</string>
+    <string name="TAG_MAP_FRAGMENT" translatable="false">MAP FRAGMENT</string>
+    <string name="TAG_INFO_WINDOWS_RESPONSE" translatable="false">INFO WINDOWS OPEN</string>
+    <string name="TAG_MAP_READY_RESPONSE" translatable="false">MAP READY</string>
+
+    <!-- LOG MAPA -->
 
 
 </resources>
