--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,6 +138,8 @@
     <string name="FIREBASE_CHANNEL_CREATED_MESSAGE" translatable="false">Canal de notificacion creado</string>
     <string name="FIREBASE_PREF_KEY" translatable="false">pref_suscrito_quake</string>
     <string name="FIREBASE_TOPIC_NAME" translatable="false">Quakes</string>
+    <string name="FIREBASE_PREF_KEY_TOAST_ALERTAS_ON">Alertas activadas</string>
+    <string name="FIREBASE_PREF_KEY_TOAST_ALERTAS_OFF">Alertas desactivadas</string>
 
     <!-- Strings de Snackbars -->
     <string name="SNACKBAR_TIMEOUT_ERROR_PRESSED" translatable="false">SNACKBAR_TIMEOUT_ERROR</string>
@@ -240,6 +242,10 @@
     <string name="TAG_NIGHT_MODE_STATUS_OFF" translatable="false">OFF</string>
     <string name="TAG_NIGHT_MODE_AUTO" translatable="false">NIGHT MODE AUTO</string>
     <string name="TAG_NIGHT_MODE" translatable="false">NIGHT MODE</string>
+    <string name="NIGHT_MODE_AUTO_KEY_TOAST_ON">Automático activado</string>
+    <string name="NIGHT_MODE_AUTO_KEY_TOAST_OFF">Automático desactivado</string>
+    <string name="NIGHT_MODE_MANUAL_KEY_TOAST_ON">Manual activado</string>
+    <string name="NIGHT_MODE_MANUAL_KEY_TOAST_OFF">Manual desactivado</string>
 
 
 </resources>
