Implementaciones de testing fragmento quakes, menu de opciones y en tabs
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -35,7 +35,7 @@
     <string name="invitation_welcome">¡Welcome!</string>
     <string name="icono_ondas">Waves icon</string>
     <string name="invite">Invite friends</string>
-    <string name="INVITATION_TITLE">" Invite your friends to use the app!"</string>
+    <string name="INVITATION_TITLE">Invite your friends to use the app!</string>
     <string name="INVITATION_SUBJECT">Download LastQuakeChile App</string>
     <string name="coordenadas_oeste">W</string>
     <string name="coordenadas_este">E</string>
@@ -57,4 +57,11 @@
     <string name="quake_time_day_info_windows">%1$d d ago</string>
     <string name="profundidad_info_windows">Depth: %.1f Km</string>
     <string name="settings">Settings</string>
+    <string name="FIREBASE_PREF_KEY_TOAST_ALERTAS_OFF">Alerts disabled</string>
+    <string name="FIREBASE_PREF_KEY_TOAST_ALERTAS_ON">Alerts enabled</string>
+    <string name="NIGHT_MODE_AUTO_KEY_TOAST_OFF">Automatic disabled</string>
+    <string name="NIGHT_MODE_AUTO_KEY_TOAST_ON">Automatic enabled</string>
+    <string name="NIGHT_MODE_MANUAL_KEY_TOAST_OFF">Manual disabled</string>
+    <string name="NIGHT_MODE_MANUAL_KEY_TOAST_ON">Manual enabled</string>
+    <string name="more_options">More options</string>
 </resources>
