--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="search">Buscar</string>
     <string name="invite">Invitar amigos</string>
     <string name="settings">Configuración</string>
+    <string name="more_options">Más opciones</string>
 
     <!-- URL SERVIDOR HEROKU -->
     <string name="URL_GET_PROD" translatable="false">https://lastquakechile-server-prod.herokuapp.com/lastquakechile/api/quakes/?limite=%1$s</string>
@@ -243,9 +244,9 @@
     <string name="TAG_NIGHT_MODE_AUTO" translatable="false">NIGHT MODE AUTO</string>
     <string name="TAG_NIGHT_MODE" translatable="false">NIGHT MODE</string>
     <string name="NIGHT_MODE_AUTO_KEY_TOAST_ON">Automático activado</string>
-    <string name="NIGHT_MODE_AUTO_KEY_TOAST_OFF">Automático desactivado</string>
     <string name="NIGHT_MODE_MANUAL_KEY_TOAST_ON">Manual activado</string>
     <string name="NIGHT_MODE_MANUAL_KEY_TOAST_OFF">Manual desactivado</string>
+    <string name="NIGHT_MODE_AUTO_KEY_TOAST_OFF">Automático desactivado</string>
 
 
 </resources>
