--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,6 +141,12 @@
     <string name="FIREBASE_TOPIC_NAME" translatable="false">Quakes</string>
     <string name="FIREBASE_PREF_KEY_TOAST_ALERTAS_ON">Alertas activadas</string>
     <string name="FIREBASE_PREF_KEY_TOAST_ALERTAS_OFF">Alertas desactivadas</string>
+    <string name="alert_pref_summary">Recibe notificaciones de sismos de +5.0 grados</string>
+    <string name="alert_pref_title">Notificaciones</string>
+    <string name="alert_pref_title_switch">Alertas de sismos</string>
+    <string name="alert_pref_summary_on">Activadas</string>
+    <string name="alert_pref_summary_off">Desactivadas</string>
+
 
     <!-- Strings de Snackbars -->
     <string name="SNACKBAR_TIMEOUT_ERROR_PRESSED" translatable="false">SNACKBAR_TIMEOUT_ERROR</string>
@@ -247,6 +253,14 @@
     <string name="NIGHT_MODE_MANUAL_KEY_TOAST_ON">Manual activado</string>
     <string name="NIGHT_MODE_MANUAL_KEY_TOAST_OFF">Manual desactivado</string>
     <string name="NIGHT_MODE_AUTO_KEY_TOAST_OFF">Automático desactivado</string>
+    <string name="night_mode_pref_summary">Evita tu cansancio ocular</string>
+    <string name="night_mode_pref_title">Modo noche</string>
+    <string name="night_mode_manual_pref_title_switch">Manual</string>
+    <string name="night_mode_manual_pref_summary_on">Activado</string>
+    <string name="night_mode_manual_pref_summary_off">Desactivado</string>
+    <string name="night_mode_auto_pref_title_switch">Automático</string>
+    <string name="night_mode_auto_pref_summary_on">Activado (10pm-6am)</string>
+    <string name="night_mode_auto_pref_summary_off">Desactivado</string>
 
 
 </resources>
