Correccion de traduccion
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -77,4 +77,6 @@
     <string name="night_mode_manual_pref_title_switch">Manual</string>
     <string name="night_mode_pref_summary">"Avoid eye fatigue "</string>
     <string name="night_mode_pref_title">Night mode</string>
+    <string name="tab_map">Map</string>
+    <string name="tab_list">List</string>
 </resources>
